multiple changes accross the main features, improvements and bug fixes
